# sdk-core

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  Cargo.toml  LICENSE.txt  README.md  REQUEST_HEADER_CODE_GEN_PLAN.md  api-linter.yaml  build.rs  build_output.txt  docker-cgroup-tests.sh  fix_commit_links.sh  integ-with-otel.sh  rust-toolchain.toml  rustfmt.toml  test_infrastructure_migration_plan.md  test_utils_refactor.md
bridge-ffi/: Cargo.toml  LICENSE.txt  build.rs
bridge-ffi/example/goffi/: .gitignore  README.md  ffi.go  ffi_callbacks.go  ffi_test.go  go.mod  go.sum
bridge-ffi/include/: sdk-core-bridge.h
bridge-ffi/src/: lib.rs  wrappers.rs
client/: Cargo.toml
client/src/: callback_based.rs  lib.rs  metrics.rs  mocks.rs  proxy.rs  raw.rs  replaceable.rs  retry.rs
client/src/worker_registry/: mod.rs
client/src/workflow_handle/: mod.rs
core/: Cargo.toml
core-api/: Cargo.toml  LICENSE.txt
core-api/src/: builtin_queries.rs  envconfig.rs  errors.rs  lib.rs  telemetry.rs  worker.rs
core-api/src/telemetry/: metrics.rs
core-api/src/worker/: telemetry.rs
core-c-bridge/: Cargo.toml  build.rs
core-c-bridge/include/: temporal-sdk-core-c-bridge.h
core-c-bridge/src/: client.rs  envconfig.rs  lib.rs  metric.rs  random.rs  runtime.rs  worker.rs
core-c-bridge/src/callback_based_worker_client/: client_impl.rs  conversions.rs  interop.rs  interop_types.rs  mod.rs  trampoline.rs
core-c-bridge/src/tests/: context.rs  mod.rs  utils.rs
core/benches/: workflow_replay.rs
core/examples/: connect-tls.rs  integ_runner.rs  lang-bridge.rs
core/src/: abstractions.rs  antithesis.rs  debug_client.rs  internal_flags.rs  internal_patching.rs  lib.rs  log_export.rs  pending_activations.rs  retry_logic.rs  test_utils.rs
core/src/abstractions/: take_cell.rs
core/src/core_tests/: activity_tasks.rs  child_workflows.rs  determinism.rs  local_activities.rs  mod.rs  queries.rs  replay_flag.rs  updates.rs  workers.rs  workflow_cancels.rs  workflow_tasks.rs
core/src/ephemeral_server/: mod.rs
core/src/pollers/: mod.rs  poll_buffer.rs
core/src/protosext/: mod.rs  protocol_messages.rs
core/src/replay/: mod.rs
core/src/telemetry/: in_memory.rs  log_export.rs  metrics.rs  mod.rs  otel.rs  prometheus_meter.rs  prometheus_server.rs
core/src/test_help/: history_builder.rs  history_info.rs  integ_helpers.rs  mod.rs  unit_helpers.rs
core/src/worker/: activities.rs  client.rs  dispatcher.rs  heartbeat.rs  mod.rs  nexus.rs  slot_provider.rs  slot_supplier.rs  tuner.rs
core/src/workflow/: bridge.rs  driven_workflow.rs  history_update.rs  mod.rs
core/tests/: fuzzy_workflow.rs  heavy_tests.rs  main.rs
core/tests/integ_tests/: activity_functions.rs  client_tests.rs  ephemeral_server_tests.rs  heartbeat_tests.rs  metrics_tests.rs  polling_tests.rs  queries_tests.rs  update_tests.rs  visibility_tests.rs  workflow_tests.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: async_activity_handle.rs  callback_based.rs  dns.rs  envconfig.rs  errors.rs  grpc.rs  lib.rs  metrics.rs  options_structs.rs  proxy.rs  raw.rs  replaceable.rs  request_extensions.rs  retry.rs  schedule_handle.rs  schedules.rs  worker.rs  workflow_handle.rs
crates/common/: Cargo.toml  build.rs
crates/common-wasm/: Cargo.toml  build.rs
crates/common-wasm/src/: activity_definition.rs  lib.rs  worker.rs
crates/common/src/: activity_definition.rs  data_converters.rs  envconfig.rs  error.rs  errors.rs  fsm_trait.rs  internal_flags.rs  lib.rs  payload_visitor.rs  priority.rs  request_headers.rs  telemetry.rs  worker.rs  workflow_definition.rs
crates/common/tests/: worker_task_types_test.rs
crates/macros/: Cargo.toml
crates/macros/src/: activities_definitions.rs  activity_definitions.rs  definitions.rs  fsm_impl.rs  lib.rs  macro_utils.rs  workflow_definitions.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk-core/: Cargo.toml
crates/sdk-core-c-bridge/: Cargo.toml
crates/sdk-core-c-bridge/include/: buf.yaml  temporal-sdk-core-c-bridge.h
crates/sdk-core-c-bridge/src/: client.rs  envconfig.rs  lib.rs  metric.rs  random.rs  runtime.rs  testing.rs  worker.rs
crates/sdk-core/benches/: workflow_replay_bench.rs
crates/sdk-core/machine_coverage/: ActivityMachine_Coverage.puml  ChildWorkflowMachine_Coverage.puml  FailWorkflowMachine_Coverage.puml  PatchMachine_Coverage.puml  UpdateMachine_Coverage.puml  UpsertSearchAttributesMachine_Coverage.puml  WorkflowTaskMachine_Coverage.puml
crates/sdk-core/src/: abstractions.rs  antithesis.rs  histfetch.rs  internal_flags.rs  lib.rs  retry_logic.rs
crates/sdk-core/tests/: activities_procmacro.rs  c_bridge_smoke_test.c  cloud_tests.rs  fsm_procmacro.rs  global_metric_tests.rs  heavy_tests.rs  main.rs  manual_tests.rs  runner.rs  wasm_workflow_tests.rs  workflows_procmacro.rs
crates/sdk/examples/: README.md
crates/sdk/src/: activities.rs  activity_context.rs  app_data.rs  error.rs  interceptors.rs  lib.rs  workflow_context.rs  workflow_executor.rs  workflow_future.rs  (+3 more)
crates/workflow/: Cargo.toml
fsm/: Cargo.toml
fsm/rustfsm_procmacro/: Cargo.toml
fsm/rustfsm_trait/: Cargo.toml
fsm/src/: lib.rs
fsm/state_machine_procmacro/: Cargo.toml
fsm/state_machine_trait/: Cargo.toml
fsm/tests/: card_reader.rs
integ_test_helpers/: Cargo.toml
integ_test_helpers/src/: lib.rs
sdk/: Cargo.toml
sdk-core-protos/: Cargo.toml  build.rs
sdk-core-protos/src/: canned_histories.rs  history_builder.rs  history_info.rs  lib.rs  task_token.rs  test_utils.rs  utilities.rs
sdk/src/: activity_context.rs  app_data.rs  conversions.rs  interceptors.rs  lib.rs  prelude.rs  workflow.rs  workflow_context.rs  workflow_future.rs
temporal-client/: Cargo.toml
temporal-client/src/: lib.rs  retry.rs
test-utils/: Cargo.toml
test-utils/src/: canned_histories.rs  histfetch.rs  history_replay.rs  http_proxy.rs  lib.rs  wf_input_saver.rs  workflows.rs
test_utils/: Cargo.toml
test_utils/src/: canned_histories.rs  histfetch.rs  history_replay.rs  lib.rs
workflow-api/: Cargo.toml
workflow-api/src/: activity_definitions.rs  lib.rs
(+942 files in other folders)
