[workspace]
members = [
    "crates/sdk-core",
    "crates/client",
    "crates/common",
    "crates/macros",
    "crates/sdk",
    "crates/sdk-core-c-bridge",
]
resolver = "2"

[workspace.package]
license = "MIT"
license-file = "LICENSE.txt"

[workspace.dependencies]
bon = { version = "3", default-features = false, features = ["alloc", "implied-bounds"] }
derive_more = { version = "2.0", default-features = false, features = [
    "constructor",
    "display",
    "from",
    "into",
    "debug",
    "try_into",
] }
thiserror = "2"
tonic = { version = "0.14", default-features = false }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
opentelemetry = { version = "0.31", default-features = false, features = ["metrics"] }
prost = "0.14"
prost-types = { version = "0.7", package = "prost-wkt-types" }
pbjson = "0.9"
pbjson-build = "0.9"
serde_json = "1.0"

[workspace.lints.rust]
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"

[profile.release-lto]
inherits = "release"
lto = true
