[package]
name = "temporal-client"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Clients for interacting with Temporal Clusters"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
mocks = ["mockall"]

[dependencies]
async-trait = "0.1"
backoff = "0.4"
derive_builder = "0.10"
derive_more = "0.99"
futures = "0.3"
futures-retry = "0.6.0"
http = "0.2"
mockall = { version = "0.11.0", optional = true }
opentelemetry = { version = "0.17", features = ["metrics"] }
prost-types = "0.9"
thiserror = "1.0"
tokio = "1.1"
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
tower = "0.4"
tracing = "0.1"
url = "2.2"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"
