[package]
name = "temporal-client"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Clients for interacting with Temporal Clusters"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
derive_builder = "0.12"
derive_more = "0.99"
futures = "0.3"
futures-retry = "0.6.0"
http = "0.2"
once_cell = "1.13"
opentelemetry = { version = "0.18", features = ["metrics"] }
parking_lot = "0.12"
prost-types = "0.11"
thiserror = "1.0"
tokio = "1.1"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
tower = "0.4"
tracing = "0.1"
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[dev-dependencies]
assert_matches = "1"
mockall = "0.11"
