[package]
name = "temporal-client"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "Clients for interacting with Temporal Clusters"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[features]
telemetry = ["dep:opentelemetry"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
base64 = "0.21.7"
derive_builder = { workspace = true }
derive_more = "0.99"
futures = "0.3"
futures-retry = "0.6.0"
http = "0.2"
hyper = { version = "0.14.28" }
once_cell = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"], optional = true  }
parking_lot = "0.12"
prost-types = { workspace = true }
slotmap = "1.0"
thiserror = "1.0"
tokio = "1.1"
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tower = "0.4"
tracing = "0.1"
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"

[dependencies.temporal-sdk-core-api]
path = "../core-api"

[dev-dependencies]
assert_matches = "1"
mockall = "0.12"

[lints]
workspace = true
