[package]
name = "temporal-sdk-core-api"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Interface definitions for the Temporal Core SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
derive_builder = "0.12"
opentelemetry = "0.18"
prost-types = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.8"
tracing-core = "0.1"
url = "2.3"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[dependencies.temporal-client]
path = "../client"
version = "0.1"
