[package]
name = "temporal-sdk-core-api"
version = "0.1.0"
edition = "2024"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "Interface definitions for the Temporal Core SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
otel_impls = ["dep:opentelemetry"]

[dependencies]
async-trait = "0.1"
derive_builder = { workspace = true }
derive_more = { workspace = true }
opentelemetry = { workspace = true, optional = true }
prost = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tonic = { workspace = true }
tracing-core = "0.1"
url = "2.3"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[lints]
workspace = true
