[package]
name = "temporal-sdk-core"
version = "0.1.0"
authors = ["Spencer Judge <spencer@temporal.io>", "Vitaly Arbuzov <vitaly@temporal.io>"]
edition = "2021"
license-file = { workspace = true }
description = "Library for building new Temporal SDKs"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[lib]

[features]
default = ["otel"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp",
    "dep:opentelemetry-prometheus", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]
tokio-console = ["console-subscriber"]
ephemeral-server = ["dep:flate2", "dep:reqwest", "dep:tar", "dep:zip"]
debug-plugin = ["dep:reqwest"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
console-subscriber = { version = "0.4", optional = true }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6.0"
derive_builder = { workspace = true }
derive_more = { workspace = true }
enum_dispatch = "0.3"
enum-iterator = "2"
flate2 = { version = "1.0", optional = true }
futures-util = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
governor = "0.7"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.2", optional = true }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"], optional = true }
itertools = "0.13"
lru = "0.12"
mockall = "0.13"
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.17", features = ["tokio", "metrics", "tls"], optional = true }
opentelemetry-prometheus = { version = "0.17", optional = true }
parking_lot = { version = "0.12", features = ["send_guard"] }
pid = "4.0"
pin-project = "1.0"
prometheus = "0.13"
prost = { workspace = true }
prost-types = { version = "0.6", package = "prost-wkt-types" }
rand = "0.8.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false, optional = true }
ringbuf = "0.4"
serde = "1.0"
serde_json = "1.0"
siphasher = "1.0"
slotmap = "1.0"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tar = { version = "0.4", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "parking_lot", "time", "fs", "process"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tokio-stream = "0.1"
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter", "registry"] }
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }
zip = { version = "2.0", optional = true }

# 1st party local deps
[dependencies.temporal-sdk-core-api]
path = "../core-api"
features = ["otel_impls"]

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
features = ["history_builders"]

[dependencies.temporal-client]
path = "../client"

[dependencies.rustfsm]
path = "../fsm"

[dev-dependencies]
assert_matches = "1.4"
bimap = "0.6.1"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.5"
rstest = "0.23"
temporal-sdk-core-test-utils = { path = "../test-utils" }
temporal-sdk = { path = "../sdk" }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = { workspace = true }

[[test]]
name = "integ_tests"
path = "../tests/main.rs"
# Prevents autodiscovery, and hence these getting run with `cargo test`. Run with
# `cargo test --test integ_tests`
test = false

[[test]]
name = "heavy_tests"
path = "../tests/heavy_tests.rs"
test = false

[[bench]]
name = "workflow_replay"
harness = false

# This is maybe a bit hacky, but we call the runner an "example" because that gets it compiling with
# the dev-dependencies, which we want.
[[example]]
name = "integ_runner"
path = "../tests/runner.rs"

[lints]
workspace = true
