[package]
name = "temporal-sdk-core-protos"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Protobuf definitions for Temporal SDKs Core/Lang interface"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
derive_more = "0.99"
prost = "0.9"
prost-wkt = "0.3"
prost-wkt-types = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.5"
prost-wkt-build = "0.3"
