[package]
name = "temporal-sdk-core-protos"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Protobuf definitions for Temporal SDKs Core/Lang interface"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[features]
history_builders = ["uuid", "rand"]

[dependencies]
anyhow = "1.0"
base64 = "0.20"
derive_more = "0.99"
prost = "0.11"
prost-types = "0.11"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.8"
uuid = { version = "1.1", features = ["v4"], optional = true }

[build-dependencies]
tonic-build = "0.8"
