[package]
name = "temporal-sdk-core-protos"
version = "0.1.0"
edition = "2024"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "Protobuf definitions for Temporal SDKs Core/Lang interface"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[features]
history_builders = ["uuid", "rand"]
serde_serialize = []
test-utilities = ["history_builders"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
derive_more = { workspace = true }
prost = { workspace = true }
prost-wkt = "0.7"
prost-types = { workspace = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { version = "1.18", features = ["v4"], optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
