[package]
name = "temporal-sdk"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = "LICENSE.txt"
description = "Temporal Rust SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.20"
crossbeam = "0.8"
derive_more = "0.99"
futures = "0.3"
once_cell = "1.10"
parking_lot = { version = "0.12", features = ["send_guard"] }
prost-types = "0.11"
sha2 = "0.10"
serde = "1.0"
tokio = { version = "1.1", features = ["rt", "rt-multi-thread", "parking_lot", "time", "fs"] }
tokio-util = { version = "0.7" }
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"

[dependencies.temporal-sdk-core]
path = "../core"
version = "0.1"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[dependencies.temporal-sdk-core-api]
path = "../core-api"
version = "0.1"

[dependencies.temporal-client]
path = "../client"
version = "0.1"
