[package]
name = "temporal-sdk-core-test-utils"
version = "0.1.0"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2021"

[[bin]]
name = "histfetch"
path = "src/histfetch.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.20"
futures = "0.3"
log = "0.4"
once_cell = "1.16"
parking_lot = "0.12"
prost = "0.11"
prost-types = "0.11"
rand = "0.8"
serde_json = "1.0"
temporal-client = { path = "../client" }
temporal-sdk = { path = "../sdk" }
temporal-sdk-core = { path = "../core" }
temporal-sdk-core-api = { path = "../core-api" }
thiserror = "1.0"
tokio = "1.1"
tokio-util = { version = "0.7" }
tracing = "0.1"
url = "2.2"
uuid = "1.1"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"
