[package]
name = "temporal-sdk-core-test-utils"
version = "0.1.0"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2024"
license-file = { workspace = true }

[[bin]]
name = "histfetch"
path = "src/histfetch.rs"

[features]
default = ["ephemeral-server"]
ephemeral-server = ["temporal-sdk-core/ephemeral-server"]

[dependencies]
anyhow = "1.0"
assert_matches = "1"
async-trait = "0.1"
bytes = "1.10"
futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.7.0" }
http-body-util = "0.1"
hyper-util = "0.1.16"
parking_lot = "0.12"
prost = { workspace = true }
rand = "0.9"
semver = "1.0"
temporal-client = { path = "../client" }
temporal-sdk = { path = "../sdk" }
temporal-sdk-core = { path = "../core" }
temporal-sdk-core-api = { path = "../core-api" }
tokio = "1.47"
tracing = "0.1"
url = "2.5"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"

[lints]
workspace = true
