[package]
name = "test_utils"
version = "0.1.0"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
log = "0.4"
rand = "0.8"
temporal-sdk-core = { path = "../core" }
temporal-sdk-core-api = { path = "../core-api" }
temporal-sdk = { path = "../temporal-sdk" }
url = "2.2"

[dependencies.temporal-sdk-core-protos]
path = "../sdk-core-protos"
version = "0.1"
