[package]
name = "temporalio-client"
version = "0.1.0"
edition = "2024"
authors = ["Temporal Technologies Inc. <sdk@temporal.io>"]
license-file = { workspace = true }
description = "Clients for interacting with Temporal"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[features]
telemetry = ["dep:opentelemetry"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
base64 = "0.22"
bon = "3"
derive_more = { workspace = true }
dyn-clone = "1.0"
bytes = "1.10"
futures-util = { version = "0.3", default-features = false }
futures-retry = "0.6.0"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7.0" }
hyper-util = "0.1.16"
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
parking_lot = "0.12"
slotmap = "1.0"
thiserror = { workspace = true }
tokio = "1.47"
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
rand = "0.9.2"

[dependencies.temporalio-common]
path = "../common"

[dev-dependencies]
assert_matches = "1"
mockall = "0.13"
rstest = "0.26"

[lints]
workspace = true
