[package]
name = "temporalio-client"
version = "0.3.0"
edition = "2024"
authors = ["Temporal Technologies Inc. <sdk@temporal.io>"]
license-file = { workspace = true }
description = "Clients for interacting with Temporal"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-rust"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = ["envconfig"]
telemetry = ["dep:opentelemetry"]
core-based-sdk = []
envconfig = ["temporalio-common/envconfig"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
base64 = "0.22"
bon = { version = "3", default-features = false, features = ["alloc"] }
derive_more = { workspace = true }
dyn-clone = "1.0"
bytes = "1.10"
futures-util = { version = "0.3", default-features = false }
futures-retry = "0.6.0"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7.0" }
hyper-util = "0.1.16"
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
parking_lot = "0.12"
thiserror = { workspace = true }
tokio = { version = "1.47", default-features = false, features = [
  "io-util",
  "net",
  "rt",
  "sync",
  "time",
] }
tonic = { workspace = true, default-features = false, features = ["tls-ring", "tls-native-roots", "channel"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.18", default-features = false, features = ["v4"] }
rand = "0.10"

[dependencies.temporalio-common]
path = "../common"
version = "0.3"

[dev-dependencies]
assert_matches = "1"
mockall = "0.14"
prost = "0.14"
prost-types = { workspace = true }
rstest = "0.26"
tempfile = "3"
tokio = { version = "1.47", default-features = false, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "sync",
  "time",
] }

[lints]
workspace = true
