[package]
name = "temporalio-common-wasm"
version = "0.2.0"
edition = "2024"
authors = ["Temporal Technologies Inc. <sdk@temporal.io>"]
license-file = { workspace = true }
description = "WASM-safe shared functionality for the Temporal Rust workflow surface"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]
exclude = ["protos/*/.github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_serialize = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bon = { workspace = true }
crc32fast = "1"
derive_more = { workspace = true }
erased-serde = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12" }
prost = { workspace = true }
prost-wkt = "0.7"
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, default-features = false, features = ["transport", "codegen"] }
tonic-prost = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "parking_lot",
  "env-filter",
  "registry",
  "ansi",
] }
tracing-core = "0.1"
url = "2.5"
uuid = { version = "1.18", default-features = false, features = ["v4"] }
pbjson = { workspace = true }

[build-dependencies]
prost = { workspace = true }
prost-types = "0.14"
tonic-prost-build = { workspace = true }
pbjson-build = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tempfile = "3.21"
tokio = { version = "1.47", features = ["macros", "rt"] }
